# log

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  log.sln
log/: CMakeLists.txt  configure.ac  log.c  log.def  log.h  log.vcxproj  log.vcxproj.filters  makefile.am
log_server/: CMakeLists.txt  log.fbs  log_generated.h  log_generated.ts  log_server.cpp
log_sqlite/: AUTHORS  CMakeLists.txt  configure.ac  log.def  log_sqlite.c  log_sqlite.cpp  log_sqlite.vcxproj  log_sqlite.vcxproj.filters  makefile.am
log_txt/: CMakeLists.txt  log_txt.cpp  log_txt.vcxproj  log_txt.vcxproj.filters
test/: CMakeLists.txt  main.c  main.cpp  test.vcxproj
test_dll/: test_dll.c  test_dll.h  test_dll.vcxproj  test_dll.vcxproj.filters
