#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(log, 0.0.0.0, wikiwang@live.com)
AM_INIT_AUTOMAKE(log, 0.0.0.0)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_PROG_RANLIB

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES(makefile)
AC_OUTPUT

